fixed notification from always getting in the way, made public drawings on a profile page visible to all users

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -23,8 +23,14 @@ html, body{
   top: 0;
   padding-top: 30px;
 }
-.profile-edit, .signup, .login-form, .failure{
+.profile-edit, .signup, .login-form, .failure, .notification-list{
   display: none;
+}
+.notification-list{
+  position: absolute;
+  top: 30px;
+  left: 450px;
+  background: white;
 }
 .login-form{
   position: absolute;
